--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -8,8 +8,19 @@
 	author = {Ilja N. Bronstein and Konstantin A. Semendjajew and Gerhard Musiol and Heiner M\"uhlig},
 	title = {{Taschenbuch der Mathematik, Siebte Auflage}},
 	year = {2008},
-	publisher = {Wissenschaftlicher Verlag Harri Deutsch‎ GmbH, Frankfurt am Main, Germany},
+	publisher = {Wissenschaftlicher Verlag Harri Deutsch GmbH, Frankfurt am Main, Germany},
 	isbn = {978-3-8171-2017-8},
+}
+
+
+@book
+{
+	Stoecker1999,
+	author = {Stoecker},
+	title = {{Taschenbuch mathematischer Formeln}},
+	year = {1999},
+	publisher = {Wissenschaftlicher Verlag Harri Deutsch GmbH, Frankfurt am Main, Germany},
+	isbn = {3-8171-1573-3},
 }
 
 
