--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1108,6 +1108,17 @@
 
 @misc
 {
+	web_gl_frustum,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{glFrustum --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/glFrustum.xml",
+	note = "[Online; accessed 23-August-2021]"
+}
+
+
+@misc
+{
 	web_gl_perspective,
 	author = {{Silicon Graphics, Inc.}},
 	title = {{gluPerspective --- OpenGL Reference}},
