continued with gl math chapter

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -994,6 +994,18 @@
 
 @misc
 {
+	web_QVulkanWindow,
+	title = {{Class QVulkanWindow, part of the Qt library \cite{web_Qt} (Software)}},
+	author = {{The Qt Company}},
+	year = {2021},
+	url = "https://doc.qt.io/qt-5/qvulkanwindow.html#coordinate-system-differences-between-opengl-and-vulkan",
+	OPThowpublished = "\url{https://doc.qt.io/qt-5/qvulkanwindow.html#coordinate-system-differences-between-opengl-and-vulkan}",
+	note = "[Online; accessed 23-August-2021]",
+}
+
+
+@misc
+{
 	web_QCustomPlot,
 	title = {{QCustomPlot (Software)}},
 	author = {Emanuel Eichhammer},
