--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -226,7 +226,7 @@ component, $w$, and three imaginary components, $x$, $y$, and $z$.
 Usually, quaternions are written as tuples $\left( w,\,x,\,y,\,z \right) = \left( w,\,\underline{v} \right) \in \mathbb{H}$,
 where the three imaginary components are treated as a vector component.
 Algebraically, quaternions form the division ring $\mathbb{H}$, named after William Rowan Hamilton, which follows from the 
-basic properties of the three imaginary units, $i$, $j$, and $k$:
+basic properties of the three imaginary units, $i$, $j$, and $k$ \cite{TODO}:
 \begin{equation}
 	i^2 \ =\ j^2 \ =\ k^2 \ =\ ijk \ =\ -1.
 	\label{eq:quat_basic}
@@ -279,8 +279,8 @@ and verifying that the results are equal in both cases.
 \label{sec:gl_projs}
 To be able to display it in 2-d, the 3-d scene needs to be projected onto a plane representing the screen.
 For \textit{OpenGL} these screen coordinates have to be normalised to $x, y \in \left[-1,\, 1\right]$,
-as well as $z \in \left[-1,\, 1\right]$ (alternatively, $z \in \left[0,\, 1\right]$ for \textit{Vulkan}),
-where $z$ represents the value for the $z$ buffer.
+as well as $z \in \left[-1,\, 1\right]$ (alternatively, $z \in \left[0,\, 1\right]$ for \textit{Vulkan}) 
+\cite{web_QVulkanWindow}.
 
 \subsubsection{Parallel projection}
 The standard orthogonal projection matrix fulfilling these requirements is given as
@@ -288,43 +288,42 @@ The standard orthogonal projection matrix fulfilling these requirements is given
 \begin{equation}
 	P_{\mathrm{ortho}} \ =\
 		\left( \begin{array}{cccc}
-			\frac{2}{r-l} &                             0 &              0 &  \frac{l+r}{l-r}                  \\
-			            0 &  \sigma_y \cdot \frac{2}{t-b} &              0 &  \sigma_y \cdot \frac{b+t}{b-t}   \\
-			            0 &                             0 &  \frac{s}{n-f} &  \frac{n+f_0}{n-f}                \\
-			            0 &                             0 &              0 &  1
+			\frac{2}{w} &                           0 &              0 &  0                  \\
+			          0 &  \sigma \cdot \frac{2}{h} &              0 &  0                  \\
+			          0 &                           0 &  \frac{s}{n-f} &  \frac{n+f_0}{n-f}  \\
+			          0 &                           0 &              0 &  1
 		\end{array} \right),
 \end{equation}
-where $l$, $r$, $b$, $t$, $n$ and $f$ are the distances of the left, right, bottom, top, near and far planes,
-respectively.
-The $\sigma_y$ is a sign factor depending on the coordinate system handedness, it is left-handed for
+where $w$ and $h$ are the respective distances between the left and right as well as the top and bottom 
+view planes, and $n$ and $f$ are the distances of the near and far planes.
+$\sigma$ is a sign factor depending on the coordinate system handedness, it is left-handed for
 \textit{OpenGL} and right-handed for \textit{Vulkan},
 $s$ and $f_0$ are scaling factors. The values for these constants are given in table \ref{tab:gl_constants}.
 As can be directly read off, the matrix consists of a scaling by
-$\left(\frac{2}{r-l}, \, \sigma_y \frac{2}{t-b}, \, \frac{s}{n-f} \right)^t$
-followed by a translation by
-$\left( \frac{l+r}{l-r}, \, \sigma_y \frac{b+t}{b-t}, \, \frac{n+f_0}{n-f} \right)^t$,
-which map the $\left[l,\,r\right]$, $\left[b,\,t\right]$ and $\left[n,\,f\right]$ ranges into their respective
+$\left(2/w, \, 2\sigma/h, \, s/(n-f) \right)^t$
+followed by a translation by $\left( 0, \, 0, \, (n+f_0)/(n-f) \right)^t$,
+which map the $\left[-w/2, \, w/h\right]$, $\left[-h/2, \, h/2\right]$ and $\left[n,\,f\right]$ ranges into their respective
 normalised ranges, namely $\left[-1,\, 1\right]$ for \textit{OpenGL}.
 
 
 
 
 \subsubsection{Perspective projection}
-The standard perspective projection matrix to project onto the near plane of a frustum (truncated pyramid)
+The most commonly used perspective matrix to project onto the near plane of a view frustum (truncated pyramid)
 with $y$ opening angle $\phi$ is given as \cite{web_gl_perspective} \cite{web_gl_frustum} \cite[p. 81]{Sellers2002}:
 \begin{equation}
 	P_{\mathrm{persp}} \ =\
 		\left( \begin{array}{cccc}
-			\frac{2n}{r-l} &                              0 &                  0 &  0                 \\
-			             0 &  \sigma_y \cdot \frac{2n}{t-b} &                  0 &  0                 \\
-			             0 &                              0 &  \frac{n_0+f}{n-f} &  \frac{s n f}{n-f} \\
-			             0 &                              0 &         \boxed{-1} &  0
+			\frac{2n}{w} &                          0 &                  0 &  0                 \\
+			           0 &  \sigma \cdot \frac{2n}{h} &                  0 &  0                 \\
+			           0 &                          0 &  \frac{n_0+f}{n-f} &  \frac{s n f}{n-f} \\
+			           0 &                          0 &         \boxed{-1} &  0
 		\end{array} \right) \ = \
 		\left( \begin{array}{cccc}
-			\frac{\rho}{\tan\left(\phi/2 \right)} &                                                  0 &                  0 &  0                 \\
-			                                    0 &  \sigma_y \cdot \frac{1}{\tan\left(\phi/2 \right)} &                  0 &  0                 \\
-			                                    0 &                                                  0 &  \frac{n_0+f}{n-f} &  \frac{s n f}{n-f} \\
-			                                    0 &                                                  0 &         \boxed{-1} &  0
+			\frac{\rho}{\tan\left(\phi/2 \right)} &                                                0 &                  0 &  0                 \\
+			                                    0 &  \sigma \cdot \frac{1}{\tan\left(\phi/2 \right)} &                  0 &  0                 \\
+			                                    0 &                                                0 &  \frac{n_0+f}{n-f} &  \frac{s n f}{n-f} \\
+			                                    0 &                                                0 &         \boxed{-1} &  0
 		\end{array} \right),
 \end{equation}
 where the important difference is the $-1$ factor in row 4 and column 3, which generates the perspective
@@ -334,18 +333,19 @@ are fulfilled.
 The variables have the same meaning as in the orthogonal projection case.
 Additionally, $\phi$ names the field of view angle and $\rho$ is the screen ratio (e.g. 9/16 or 3/4).
 $n_0$ is a scaling factor. Typical values are given in table \ref{tab:gl_constants}.
+A full derivation of this matrix is given in Ref. \cite[pp. 350-351]{Kuipers2002}.
 
 
 \begin{table}[htb]
 	\centering
-	\begin{tabular}{|c|cc|}
+	\begin{tabular}{|c|ccc|}
 		\hline
-		    Constant &  \textit{OpenGL} &   \textit{Vulkan} \tabularnewline
+		    Constant & Remark             &  \textit{OpenGL} &   \textit{Vulkan} \tabularnewline
 		\hline
-		  $\sigma_y$ &              $1$ &              $-1$ \tabularnewline
-		       $n_0$ &              $n$ &               $0$ \tabularnewline
-		       $f_0$ &              $f$ &               $0$ \tabularnewline
-		         $s$ &              $2$ &               $1$ \tabularnewline
+		    $\sigma$ & Handedness factor  &              $1$ &              $-1$ \tabularnewline
+		       $n_0$ & Near plane factor  &              $n$ &               $0$ \tabularnewline
+		       $f_0$ & Far plane factor   &              $f$ &               $0$ \tabularnewline
+		         $s$ & $z$ scaling        &              $2$ &               $1$ \tabularnewline
 		\hline
 	\end{tabular}
 	\caption[Projection matrix constants]{
@@ -362,17 +362,20 @@ $n_0$ is a scaling factor. Typical values are given in table \ref{tab:gl_constan
 % -----------------------------------------------------------------------------
 \section{Window transformation}
 \label{sec:gl_viewport}
-Scaling the projected screen coordinates into the graphics window with width $w$, height $h$, near
-$z$ value $n$ and far $z$ value $f$ is done by the following matrix \cite{web_gl_viewport}:
+Scaling and centring of the projected screen coordinates into a graphics window with 
+width $w_{\mathrm{win}}$, height $h_{\mathrm{win}}$, 
+near $z$ value $n_{\mathrm{win}}$ and far $z$ value $f_{\mathrm{win}}$ is done by the 
+following matrix \cite{web_gl_viewport}:
 \begin{equation}
 	W \ =\ 
 	\left( \begin{array}{cccc} 
-		w/2 &   0 &                  0 &                w/2 \\
-		  0 & h/2 &                  0 &                h/2 \\
-		  0 &   0 & \left(f-n\right)/2 & \left(f+n\right)/2 \\
-		  0 &   0 &                  0 &                  1
-	\end{array} \right) \cdot
+		\frac{1}{2} w_{\mathrm{win}} &                              0 &                                                          0 &                              \frac{1}{2} w_{\mathrm{win}} \\
+		                           0 &   \frac{1}{2} h_{\mathrm{win}} &                                                          0 &                               \frac{1}{2} h_{\mathrm{win}} \\
+		                           0 &                              0 & \frac{1}{2} \left(f_{\mathrm{win}}-n_{\mathrm{win}}\right) & \frac{1}{2} \left(f_{\mathrm{win}}+n_{\mathrm{win}}\right) \\
+		                           0 &                              0 &                                                          0 &                                                          1
+	\end{array} \right),
 \end{equation}
+where $z$ represents the values for the $z$ buffer.
 % -----------------------------------------------------------------------------
 
 
